--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>javafx-controls</artifactId>
             <version>20</version>
         </dependency>
+        <dependency>
+            <groupId>com.tangorabox</groupId>
+            <artifactId>component-inspector-fx</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
