Hook up console, log, and rest (working)

--- a/imgui.ini
+++ b/imgui.ini
@@ -8,7 +8,7 @@ Collapsed=0
 ViewportPos=1360,101
 ViewportId=0xE927CF2F
 Size=550,680
-Collapsed=0
+Collapsed=1
 
 [Window][Jarvis Scaffolding]
 ViewportPos=333,210
@@ -17,28 +17,43 @@ Size=645,469
 Collapsed=0
 
 [Window][Jarvis Control Panel]
-ViewportPos=187,149
+ViewportPos=23,102
 ViewportId=0x7EFEAB10
-Size=400,286
+Size=539,177
 Collapsed=0
 
 [Window][Object Graph]
-ViewportPos=558,118
+ViewportPos=582,100
 ViewportId=0xAEE21AD6
 Size=736,590
 Collapsed=0
 
 [Window][Debug Step Control]
-ViewportPos=1151,639
+ViewportPos=838,731
 ViewportId=0x042E7CE5
 Size=128,48
 Collapsed=0
 
 [Window][View]
-ViewportPos=88,495
+ViewportPos=0,579
 ViewportId=0x5ECF04B0
 Size=753,390
 Collapsed=0
+
+[Window][Event Log]
+ViewportPos=1384,153
+ViewportId=0xA4D966FE
+Pos=0,380
+Size=458,372
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Console]
+ViewportPos=1384,153
+ViewportId=0xA4D966FE
+Size=458,378
+Collapsed=0
+DockId=0x00000002,0
 
 [Table][0x64418101,3]
 RefScale=13
@@ -78,4 +93,7 @@ Column 1  Width=63
 Column 2  Width=63
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=1384,153 Size=458,752 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=458,127 Selected=0xF9BEF62A
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=458,125 Selected=0x1710D99F
 
