--- a/imgui.ini
+++ b/imgui.ini
@@ -17,43 +17,67 @@ Size=645,469
 Collapsed=0
 
 [Window][Jarvis Control Panel]
-ViewportPos=23,102
-ViewportId=0x7EFEAB10
-Size=539,177
+ViewportPos=128,125
+ViewportId=0xA4D966FE
+Size=620,196
 Collapsed=0
+DockId=0x0000000A,0
 
 [Window][Object Graph]
-ViewportPos=584,102
-ViewportId=0xAEE21AD6
-Size=736,590
+ViewportPos=128,125
+ViewportId=0xA4D966FE
+Pos=622,0
+Size=1204,1059
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Debug Step Control]
-ViewportPos=838,731
-ViewportId=0x042E7CE5
-Size=128,48
+ViewportPos=128,125
+ViewportId=0xA4D966FE
+Pos=0,1001
+Size=620,58
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][View]
-ViewportPos=2,765
-ViewportId=0x5ECF04B0
-Size=753,274
+ViewportPos=128,125
+ViewportId=0xA4D966FE
+Pos=0,765
+Size=620,234
 Collapsed=0
+DockId=0x0000000D,0
 
 [Window][Event Log]
-ViewportPos=1384,153
+ViewportPos=128,125
 ViewportId=0xA4D966FE
-Pos=0,380
-Size=458,372
+Pos=1828,457
+Size=610,602
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Console]
-ViewportPos=1384,153
+ViewportPos=128,125
 ViewportId=0xA4D966FE
-Size=458,378
+Pos=1828,0
+Size=610,455
 Collapsed=0
 DockId=0x00000002,0
+
+[Window][Object List]
+ViewportPos=128,125
+ViewportId=0xA4D966FE
+Pos=0,503
+Size=620,260
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][Local Variable List]
+ViewportPos=128,125
+ViewportId=0xA4D966FE
+Pos=0,198
+Size=620,303
+Collapsed=0
+DockId=0x0000000E,0
 
 [Table][0x64418101,3]
 RefScale=13
@@ -92,8 +116,40 @@ Column 0  Width=63
 Column 1  Width=63
 Column 2  Width=63
 
+[Table][0xDF104735,3]
+Column 0  Weight=0.9280
+Column 1  Weight=1.0704
+Column 2  Weight=1.0016
+
+[Table][0x72F6ABE7,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x3FF138F8,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xA68F77D3,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1384,153 Size=458,752 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=458,127 Selected=0xF9BEF62A
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=458,125 Selected=0x1710D99F
+DockNode            ID=0x00000001 Pos=128,125 Size=2438,1059 Split=X
+  DockNode          ID=0x00000006 Parent=0x00000001 SizeRef=620,984 Split=Y Selected=0x7EFEAB10
+    DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=646,928 Split=Y Selected=0x5ECF04B0
+      DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=420,196 Selected=0x7EFEAB10
+      DockNode      ID=0x0000000B Parent=0x00000008 SizeRef=420,801 Split=Y Selected=0x5ECF04B0
+        DockNode    ID=0x0000000C Parent=0x0000000B SizeRef=721,565 Split=Y Selected=0x4326FC7F
+          DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=721,303 Selected=0x4326FC7F
+          DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=721,260 Selected=0x84F193FC
+        DockNode    ID=0x0000000D Parent=0x0000000B SizeRef=721,234 Selected=0x5ECF04B0
+    DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=646,54 Selected=0x042E7CE5
+  DockNode          ID=0x00000007 Parent=0x00000001 SizeRef=1816,984 Split=X
+    DockNode        ID=0x00000004 Parent=0x00000007 SizeRef=1204,984 Selected=0xAEE21AD6
+    DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=610,984 Split=Y
+      DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=458,423 Selected=0xF9BEF62A
+      DockNode      ID=0x00000003 Parent=0x00000005 SizeRef=458,559 Selected=0x1710D99F
 
